# python-template

./: .gitignore  .isort.cfg  LICENSE  README.md  dockerfile  pyproject.toml
.github/: python-app.yml
.github/workflows/: build-analysis-test.yml  build-pypi-docker.yml  python-package.yml  tag-creation.yml
CICD/: analyze.sh
src/: __main__.py
src/AGISwarm/python_template/: __init__.py  __main__.py
src/python_template/: __init__.py  __main__.py
tests/functional_tests/: test_functional_example.py
