[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AGISwarm.python-template"
authors = [{ "name" = "Denis Diachkov", "email" = "diachkov.da@gmail.com" }]
dynamic = ["version"]
description = "Python template project"
readme = "README.md"

requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ['numpy']
[project.optional-dependencies]
test = ['pytest']
analyze = ['pyright', 'pylint', 'bandit', 'black', 'isort']
build = ['setuptools', 'wheel', 'build']
publish = ['twine']

[project.urls]
"Homepage" = "https://github.com/DenisDiachkov/python-template/"
"Bug Reports" = "https://github.com/DenisDiachkov/python-template/issues"
"Source" = "https://github.com/DenisDiachkov/python-template/"


[tool.setuptools.dynamic]
version = { file = "VERSION" }


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
python_template = ["py.typed"]
